--- a/index.html
+++ b/index.html
@@ -50,12 +50,18 @@
           <li class="contact-item">
             <a class="contact-link link link-nav" href="mailto:info@devstudio.com"
               ><svg class="link-address" width="16" height="12">
-                <use href="./images/icons.svg/symbol-defs.svg#icon-envelope"></use></svg>info@devstudio.com</a>
+                <use href="./images/icons.svg/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="contact-item">
             <a class="contact-link link link-nav" href="tel:+380961111111"
               ><svg class="link-address" width="10" height="16">
-                <use href="./images/icons.svg/symbol-defs.svg#icon-Vector"></use></svg>+38 096 111 11 11</a>
+                <use href="./images/icons.svg/symbol-defs.svg#icon-Vector"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -73,7 +79,9 @@
       <section class="section hero">
         <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="btn-hero module-btn-hero" type="button" data-modal-open>Замовити послугу</button>
+          <button class="btn-hero module-btn-hero" type="button" data-modal-open>
+            Замовити послугу
+          </button>
         </div>
       </section>
 
@@ -138,24 +146,26 @@
             <li class="work-item">
               <div class="work-thomb">
                 <img
-                class="gallery-image"
-                src="images/box.jpg"
-                alt="Набір тексту на планшеті"
-                width="370"
-                height="294"/> 
+                  class="gallery-image"
+                  src="images/box.jpg"
+                  alt="Набір тексту на планшеті"
+                  width="370"
+                  height="294"
+                />
                 <div class="work-wrap">
-                <h3 class="work-text">Десктопні додатки</h3>
-                  </div>
+                  <h3 class="work-text">Десктопні додатки</h3>
                 </div>
+              </div>
             </li>
             <li class="work-item">
               <div class="work-thomb">
-              <img
-                class="gallery-image"
-                src="images/box2.jpg"
-                alt="Екран ноутбука з макетами телефону"
-                width="370"
-                height="294"/>
+                <img
+                  class="gallery-image"
+                  src="images/box2.jpg"
+                  alt="Екран ноутбука з макетами телефону"
+                  width="370"
+                  height="294"
+                />
                 <div class="work-wrap">
                   <h3 class="work-text">Мобільні додатки</h3>
                 </div>
@@ -163,14 +173,15 @@
             </li>
             <li class="work-item">
               <div class="work-thomb">
-              <img
-                class="gallery-image"
-                src="images/box3.jpg"
-                alt="Планшет з вибором кольору"
-                width="370"
-                height="294"/>
+                <img
+                  class="gallery-image"
+                  src="images/box3.jpg"
+                  alt="Планшет з вибором кольору"
+                  width="370"
+                  height="294"
+                />
                 <div class="work-wrap">
-              <h3 class="work-text">Дизайнерські рішення</h3>
+                  <h3 class="work-text">Дизайнерські рішення</h3>
                 </div>
               </div>
             </li>
