--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
+
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -22,9 +24,13 @@
   </head>
 
   <body class="page">
+
     <!--Шапка сторінки-->
+
     <header class="menu-header">
+
       <!--меню навігації на наступні сторінки-->
+
       <div class="container header-container">
         <nav class="main-nav">
           <div class="header-link">
@@ -35,7 +41,7 @@
 
           <ul class="main-nav-items list">
             <li class="nav-item header-item">
-              <a class="nav-link-1 link current" href="./index.html"> Студія </a>
+              <a class="nav-link link current" href="./index.html"> Студія </a>
             </li>
             <li class="nav-item header-item">
               <a class="nav-link link" href="./portfolio.html">Портфоліо</a>
@@ -74,8 +80,11 @@
     </div>
 
     <!--Унікальний контент сторінки-->
+
     <main class="main-content">
+
       <!--Секция Герой-->
+
       <section class="section hero">
         <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
@@ -86,6 +95,7 @@
       </section>
 
       <!--Секція особливості команди розробників-->
+
       <section class="section skils">
         <div class="container">
           <h2 class="visually-hidden">Галерея робіт</h2>
@@ -139,6 +149,7 @@
       </section>
 
       <!--Секція галерея-->
+
       <section class="work section">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
@@ -190,6 +201,7 @@
       </section>
 
       <!--Наша команда-->
+
       <section class="section teams">
         <div class="container">
           <h2 class="title-teams">Наша команда</h2>
