--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -21,9 +23,13 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body class="page">
+
     <!--Шапка сторінки-->
+
     <header class="menu-header">
+
       <!--меню навігації на наступні сторінки-->
+
       <div class="container header-container">
         <nav class="main-nav">
           <div class="header-link">
@@ -37,7 +43,7 @@
               <a class="nav-link link" href="./index.html">Студія</a>
             </li>
             <li class="nav-item header-item">
-              <a class="nav-link-1 link current" href="./portfolio.html">Портфоліо</a>
+              <a class="nav-link link current" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="nav-item header-item">
               <a class="nav-link link" href="/Контакты">Контакти</a>
@@ -66,11 +72,15 @@
     </header>
 
     <main class="main-content">
+
       <!-- Портфоліо секція -->
+
       <section class="section portfolio">
         <div class="container">
           <h1 class="visually-hidden">Портфоліо</h1>
+
           <!-- Фiльтер -->
+
           <ul class="filter-item list">
             <li class="filter-item">
               <button class="filter-bnt-now button active" type="button">Усі</button>
@@ -88,25 +98,29 @@
               <button class="filter-bnt button" type="button">Маркетинг</button>
             </li>
           </ul>
+
           <!--Картки-->
+
           <ul class="cards item list">
             <li class="cards-item">
-              <div class="cards-thumb">
-                <img
-                  class="cards-image"
-                  src="images/Portfolio/img.jpg"
-                  alt="Ноутбук із картками"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">
-                  <p class="overlay-content">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                    приватну особу.
-                  </p>
+              <a href="">
+                <div class="cards-thumb">
+                  <img
+                    class="cards-image"
+                    src="images/Portfolio/img.jpg"
+                    alt="Ноутбук із картками"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-content">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
                 </div>
-              </div>
+              </a>
               <div class="portfolio-cards">
                 <h2 class="cards-title">Технокряк</h2>
                 <p class="cards-text">Веб-сайт</p>
@@ -114,6 +128,7 @@
             </li>
 
             <li class="cards-item">
+              <a href="">
               <div class="cards-thumb">
                 <img
                   class="cards-image"
@@ -130,6 +145,7 @@
                   </p>
                 </div>
               </div>
+            </a>
               <div class="portfolio-cards">
                 <h2 class="cards-title">Постер Orlean vs Golden Star</h2>
                 <p class="cards-text">Дизайн</p>
@@ -137,6 +153,7 @@
             </li>
 
             <li class="cards-item">
+              <a href="">
               <div class="cards-thumb">
                 <img
                   class="cards-image"
@@ -153,6 +170,7 @@
                   </p>
                 </div>
               </div>
+            </a>
               <div class="portfolio-cards">
                 <h2 class="cards-title">Ресторан Seafood</h2>
                 <p class="cards-text">Додаток</p>
@@ -160,6 +178,7 @@
             </li>
 
             <li class="cards-item">
+              <a href="">
               <div class="cards-thumb">
                 <img
                   class="cards-image"
@@ -176,6 +195,7 @@
                   </p>
                 </div>
               </div>
+            </a>
               <div class="portfolio-cards">
                 <h2 class="cards-title">Проєкт Prime</h2>
                 <p class="cards-text">Маркетинг</p>
@@ -183,6 +203,7 @@
             </li>
 
             <li class="cards-item">
+              <a href="">
               <div class="cards-thumb">
                 <img
                   class="cards-image"
@@ -199,6 +220,7 @@
                   </p>
                 </div>
               </div>
+            </a>
               <div class="portfolio-cards">
                 <h2 class="cards-title">Проєкт Boxes</h2>
                 <p class="cards-text">Додаток</p>
@@ -206,6 +228,7 @@
             </li>
 
             <li class="cards-item">
+              <a href="">
               <div class="cards-thumb">
                 <img
                   class="cards-image"
@@ -222,6 +245,7 @@
                   </p>
                 </div>
               </div>
+            </a>
               <div class="portfolio-cards">
                 <h2 class="cards-title">Inspiration has no Borders</h2>
                 <p class="cards-text">Веб-сайт</p>
@@ -229,6 +253,7 @@
             </li>
 
             <li class="cards-item">
+              <a href="">
               <div class="cards-thumb">
                 <img
                   class="cards-image"
@@ -245,6 +270,7 @@
                   </p>
                 </div>
               </div>
+            </a>
               <div class="portfolio-cards">
                 <h2 class="cards-title">Видання Limited Edition</h2>
                 <p class="cards-text">Дизайн</p>
@@ -252,6 +278,7 @@
             </li>
 
             <li class="cards-item">
+              <a href="">
               <div class="cards-thumb">
                 <img
                   class="cards-image"
@@ -268,6 +295,7 @@
                   </p>
                 </div>
               </div>
+            </a>
               <div class="portfolio-cards">
                 <h2 class="cards-title">Проєкт LAB</h2>
                 <p class="cards-text">Маркетинг</p>
@@ -275,6 +303,7 @@
             </li>
 
             <li class="cards-item">
+              <a href="">
               <div class="cards-thumb">
                 <img
                   class="cards-image"
@@ -291,6 +320,7 @@
                   </p>
                 </div>
               </div>
+            </a>
               <div class="portfolio-cards">
                 <h2 class="cards-title">Growing Business</h2>
                 <p class="cards-text">Додаток</p>
@@ -302,6 +332,7 @@
     </main>
 
     <!-- Підвал сторінки -->
+
     <footer class="main-footer">
       <div class="container footer-container">
         <div>
